# profile-anything

./: CMakeLists.txt  Dockerfile  Makefile  README.md  setup.py
include/: PerfEvent.hpp
src/: HyperProfiler.cpp  hyperprofiler.cpp  hyperprofiler.h  hyperprofiler.i  hyperprofiler_wrap.cxx  main.cpp
tests/: CMakeLists.txt
